# improved-giggle

./: .gitignore  CMakeLists.txt  README.md  generate.cpp
apps/: CMakeLists.txt  benchmark.cpp  generate.cpp
cmake/: FindMKL.cmake
cpu-giggle/: CMakeLists.txt  accelerate_benchmark.cpp  cpu_benchmark.h  mkl_benchmark.cpp  mkl_benchmark.h  my_gemm_benchmark.cpp  naive_benchmark.cpp  naive_omp_benchmark.cpp  opt1_benchmark.cpp  opt1_omp_benchmark.cpp  opt2_512_benchmark.cpp  opt2_benchmark.cpp  opt3_benchmark.cpp  opt4_benchmark.cpp  opt5_benchmark.cpp
gpu-giggle/: CMakeLists.txt  cublas_benchmark.cu  gpu_benchmark.h  gpu_util.cu  gpu_util.h  naive_benchmark.cu  opt1_benchmark.cu  opt2_benchmark.cu  opt3_benchmark.cu
scripts/: mat_check.py  plotter.py
src/: CMakeLists.txt  data_manager.cpp  data_manager.h
tests/: CMakeLists.txt  cpu_mkl_test.cpp  cpu_naive_test.cpp  cpu_omp_naive_test.cpp  cpu_omp_opt1_test.cpp  cpu_opt1_test.cpp  cpu_opt2_test.cpp  cpu_opt3_test.cpp  cpu_opt4_test.cpp  cpu_opt5_test.cpp  cublas_test.cpp  gpu_cublas_test.cpp  gpu_naive_test.cpp  gpu_opt1_test.cpp  gpu_opt2_test.cpp  gpu_opt3_test.cpp  mkl_test.cpp  naiveGPU_test.cpp  naive_omp_cpu_test.cpp  naive_test.cpp  opt1GPU_test.cpp  opt1_omp_cpu_test.cpp  opt1_test.cpp  opt2_test.cpp  opt3GPU_test.cpp  opt3_test.cpp  test1.cpp  test_helper.cpp  test_helper.h
